--- a/src/app/data-display/data-display.component.html
+++ b/src/app/data-display/data-display.component.html
@@ -20,7 +20,9 @@
           <td>{{ i.category }}</td>
           <td>{{ i.userPassword }}</td>
           <td>
-            <button class="btn btn-success">Edit</button>
+            <button class="btn btn-success" (click)="handleEditClick(i.id)">
+              Edit
+            </button>
             <button class="btn btn-danger">Delete</button>
           </td>
         </tr>
@@ -29,7 +31,10 @@
   </div>
 
   <div class="col-md-6">
-    <form #userPost="ngForm" (ngSubmit)="onSubmit(userPost.value)">
+    <form
+      #userPasswordForm="ngForm"
+      (ngSubmit)="onSubmit(userPasswordForm.value)"
+    >
       <input
         class="form-control form-control-sm"
         type="text"
@@ -59,14 +64,18 @@
       <br />
       <input
         class="form-control form-control-sm"
-        type="password"
+        type="text"
         name="userPassword"
         placeholder="Password"
         ngModel
         required
       />
       <br />
-      <button type="submit" class="btn btn-success">Create</button>
+      <input
+        class="btn btn-success"
+        type="submit"
+        value="{{ editMode ? 'Update Password' : 'Add New Password' }}"
+      />
     </form>
   </div>
 </div>
