Small improvements and removed decryption function

--- a/src/app/data-display/data-display.component.html
+++ b/src/app/data-display/data-display.component.html
@@ -80,7 +80,7 @@
         />
         <br />
         <input
-          class="btn btn-success"
+          class="{{ editMode ? 'btn btn-success' : 'btn btn-primary' }} "
           type="submit"
           value="{{ editMode ? 'Update Password' : 'Add New Password' }}"
         />
